[package]
name = "Sphinx-Core"
version = "1.0.0"
authors = ["9646516 <zyq855@gmail.com>", "Myriad-Dreamin <camiyoru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sphinx"
path = "src/lib.rs"

[workspace]
members = [
    "sphinx-core",
    "sphinx-core-docker-provider"
]

[dependencies]
sphinx-core = { path = "sphinx-core" }
sphinx-core-docker-provider = { path = "sphinx-core-docker-provider" }
crossbeam = "0.7.2"
bytes = "0.4.12"
tokio = { version = "0.2", features = ["full"] }
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", branch = "master", features = ["cmake-build"] }
