[package]
name = "Sphinx-Core"
version = "1.0.0"
authors = ["9646516 <zyq855@gmail.com>", "Myriad-Dreamin <camiyoru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sphinx"
path = "src/lib.rs"

[workspace]
members = [
    "sphinx-core",
    "extensions/sphinx-core-docker-extension",
    "extensions/sphinx-core-kafka-extension",
    "deployments/sphinx-core-boj"
]

