[package]
name = "sphinx-core-docker-extension"
version = "0.1.0"
authors = ["Myriad-Dreamin <camiyoru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sphinx_core_docker"
path = "src/lib.rs"

[dependencies]
sphinx-core = { path = "../../sphinx-core" }
tar = "0.4.26"
dockworker = "0.0.15"
# rdkafka-sys = "2.1.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
