[package]
name = "sphinx-core-kafka-extension"
version = "0.1.0"
authors = ["Myriad-Dreamin <camiyoru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sphinx_core_kafka"
path = "src/lib.rs"

[dependencies]
sphinx-core = { path = "../../sphinx-core" }
tokio = { version = "0.2", features = ["full"] }
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", branch = "master", features = ["cmake-build"] }
futures = "0.3"
async-trait = "0.1.40"
log = "0.4"
